Lesson 7: Add product categories (web & api)
